bulltin sort fixed

--- a/_posts/2019-12-25-JBYR.html
+++ b/_posts/2019-12-25-JBYR.html
@@ -3,7 +3,7 @@ title: "جستار: اقدام ملی ناظر بر تحولات اقلیمی"
 authors: حمیدرضا بابایی 
 types: "bulletins" 
 categories: "ircity" 
-sort: 10 
+sortOrder: 10 
 slug: "JBYR" 
 --- 
 پیش از ورود به بحث درباره‌ی صحبت های رئیس‌جمهور چند نکته قابل بررسی است. رئیس‌جمهور می‌گوید: «یک شهر بسازید»؛ اما در این باره که این شهر چگونه شهری باید باشد نکته‌ی خاصی را مطرح نمی‌کند، البته می‌توان فرض را بر این گذاشت که قصد ایشان تنها طرح این مسئله است و ادامه‌ی کار را به متخصصان این عرصه محول می‌کنند؛ اما نگاه دیگر این است که ما برمبنای همان چند جمله‌ای که ایشان گفته‌اند بحث را پر و بال بدهیم، به نحوی که انگار اندیشه‌ها و پیشنهادهای این شهر را در این سه چهار جمله می‌توان یافت. فقط اینکه چون گفته‌های ایشان مختصر و کمی مبهم است، امکان برداشت‌های مختلف وجود دارد. شاید به خاطر همین ابهام، برخی از بیانات ایشان با هم متناقض به‌ نظر برسد؛ اما ما فرض را بر سازگاری سخنان ایشان می‌گذاریم. در این نوشته تنها به چند نکته از مسائل نهفته در جملات ایشان اشاره و در‌نهایت پیشنهادی در‌خصوص این شهر عرضه می‌شود.
