--- a/_posts/2019-12-25-kRTD.html
+++ b/_posts/2019-12-25-kRTD.html
@@ -3,7 +3,7 @@ title: "جستار: معماری شهرهای بی‌هویت ما"
 authors: منیژه خادمی 
 types: "bulletins" 
 categories: "ircity" 
-sort: 8 
+sortOrder: 8 
 featureImg: "/assets/img/posts/kRTD.jpg" 
 slug: "kRTD" 
 gallery: 
