--- a/_posts/2020-03-15-eyJZ.html
+++ b/_posts/2020-03-15-eyJZ.html
@@ -1,17 +1,19 @@
 --- 
 title: "به یاد استاد هوشنگ ظریف" 
-authors: بابک خضرائی 
+authors: khazrai 
 types: blog 
+tags: هوشنگ ظریف,تارنوازی,تار,موسیقی سنتی,موسیقی ایرانی,موسیقی دستگاهی,ردیف موسیقی ایرانی,ردیف موسیقی دستگاهی,موسیقی ردیف دستگاهی,موسی معروفی 
 featured: false
 slug: eyJZ 
+excerpt: "هوشنگ ظریف از معدود استادانی بود که هم نزد استادان بزرگ شاگردی کرد و هم شاگردانش را به استادی رساند. حلقه ارتباط نسل‌هایی بود که گاه صدسال با هم فاصله داشتند؛ چنان‌که از استادش، موسی‌خان معروفی، ۵۰ سال کوچکتر بود و در اواخر دوره معلمی‌اش شاگردانی داشت از خودش ۵۰ سال کوچکتر؛ به‌این‌ترتیب، با بیش از پنج دهه تدریس، در شمار مؤثرترین معلمان تار در عصر حاضر است." 
 --- 
-<p>ی آفتاب حسن برون آ دمی ز ابر&nbsp;</p>
-<p>کان چهره مشعشع تابانم آرزوست&nbsp;</p>
-<p>&nbsp;</p>
-<p>زین خلق پرشکایت گریان شدم ملول&nbsp; &nbsp; &nbsp; &nbsp;</p>
-<p>آن های&zwnj;هوی و نعره مستانم آرزوست</p>
-<p>&nbsp;</p>
-<p>باقی این غزل را ای مطرب ظریف&nbsp; &nbsp; &nbsp;&nbsp;</p>
-<p>زین&zwnj;سان همی&zwnj;شمار که زین&zwnj;سانم آرزوست</p>
-<p>&nbsp;</p>
-<p>هوشنگ ظریف از معدود استادانی بود که هم نزد استادان بزرگ شاگردی کرد و هم شاگردانش را به استادی رساند. حلقه ارتباط نسل&zwnj;هایی بود که گاه صدسال با هم فاصله داشتند؛ چنان&zwnj;که از استادش، موسی&zwnj;خان معروفی، ۵۰ سال کوچکتر بود و در اواخر دوره معلمی&zwnj;اش شاگردانی داشت از خودش ۵۰ سال کوچکتر؛ به&zwnj;این&zwnj;ترتیب، با بیش از پنج دهه تدریس، در شمار مؤثرترین معلمان تار در عصر حاضر است. در دوره رونق رادیو، نوازندگی&zwnj;اش در سایه&zwnj; شهناز و شریف افتاد و، در دوره&zwnj; شکوفایی مرکز حفظ&zwnj;واشاعه، تحت&zwnj;الشعاع نسل بعد از خود بود. اما دقیق و مهربان، پرکار و بی&zwnj;هیاهو، متواضع و محترم، یک عمر، صحیح و با وسواس، شریف و با وجدان، مضراب به دست نوآموزان داد، آنان را&zwnj; که در میانه&zwnj; راه بودند برکشید، تکنوازی کرد و قطعه ساخت و در بهترین گروه&zwnj;نوازی&zwnj;های دوره&zwnj;ی خود حضوری موثر یافت و نشان داد که همه این فضائل را می&zwnj;شود با&zwnj;هم داشت و همه&zwnj; این کارها را می&zwnj;شود به&zwnj;خوبی به انجام رساند. زخمه&zwnj;اش را دیگران هم برداشتند و پنجه&zwnj;اش را دیگران هم دارند؛ ای&zwnj;کاش از سلوک و ادب او هم چیزی نصیبمان شود.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">ای آفتاب حسن برون آ دمی ز ابر&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">کان چهره مشعشع تابانم آرزوست&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">زین خلق پرشکایت گریان شدم ملول</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">آن های&zwnj;هوی و نعره مستانم آرزوست</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">باقی این غزل را ای مطرب ظریف</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: center;">زین&zwnj;سان همی&zwnj;شمار که زین&zwnj;سانم آرزوست</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">هوشنگ ظریف از معدود استادانی بود که هم نزد استادان بزرگ شاگردی کرد و هم شاگردانش را به استادی رساند. حلقه ارتباط نسل&zwnj;هایی بود که گاه صدسال با هم فاصله داشتند؛ چنان&zwnj;که از استادش، موسی&zwnj;خان معروفی، ۵۰ سال کوچکتر بود و در اواخر دوره معلمی&zwnj;اش شاگردانی داشت از خودش ۵۰ سال کوچکتر؛ به&zwnj;این&zwnj;ترتیب، با بیش از پنج دهه تدریس، در شمار مؤثرترین معلمان تار در عصر حاضر است. در دوره رونق رادیو، نوازندگی&zwnj;اش در سایه&zwnj; شهناز و شریف افتاد و، در دوره&zwnj; شکوفایی مرکز حفظ&zwnj;واشاعه، تحت&zwnj;الشعاع نسل بعد از خود بود. اما دقیق و مهربان، پرکار و بی&zwnj;هیاهو، متواضع و محترم، یک عمر، صحیح و با وسواس، شریف و با وجدان، مضراب به دست نوآموزان داد، آنان را&zwnj; که در میانه&zwnj; راه بودند برکشید، تکنوازی کرد و قطعه ساخت و در بهترین گروه&zwnj;نوازی&zwnj;های دوره&zwnj;ی خود حضوری موثر یافت و نشان داد که همه این فضائل را می&zwnj;شود با&zwnj;هم داشت و همه&zwnj; این کارها را می&zwnj;شود به&zwnj;خوبی به انجام رساند. زخمه&zwnj;اش را دیگران هم برداشتند و پنجه&zwnj;اش را دیگران هم دارند؛ ای&zwnj;کاش از سلوک و ادب او هم چیزی نصیبمان شود.</p>
