--- a/_posts/2021-08-22-a45s.html
+++ b/_posts/2021-08-22-a45s.html
@@ -1,22 +1,21 @@
----
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع"
-authors: asmaneh
-types: news
+--- 
+title: "دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع|برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران" 
+authors: asmaneh 
+types: news 
 featured: false
-slug: a45s
-gallery:
-- image_path: "/assets/img/posts/a45s-1.jpg"
-  title: ""
-
-excerpt: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی  دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع| مریم شائیان  استاد راهنما: دکتر مهرداد قیومی بیدهندی استاد مشاور: صبا مدنی  داوران: دکتر محمد فلاح، دکتر مهنام نجفی  زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۰ صبح  "
----
-<p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
+slug: a45s 
+gallery: 
+- image_path: "/assets/img/posts/a45s-1.jpg" 
+  title: "" 
+ 
+--- 
+<p>معماری خانگی از جمله موضوعاتی است که در میان تحقیقات تاریخ معماری دورۀ قاجاریه کمتر به آن پرداخته شده است. بسیاری از بنا&zwnj;ها در دورۀ قاجاریه، دورۀ گذار، دستخوش دگرگونی شدند و خانه&zwnj;ها نیز از این قاعده مستثنی نماندند. بخشی ا&zwnj;ز این دگرگونی عینی و بخش دیگر آن ذهنی بود. خاطره&zwnj;نامه&zwnj;های به جا مانده از دورۀ قاجاریه از جمله منابعی هستند که می&zwnj;توانند ما را در پی بردن به این دگرگونی&zwnj;ها یاری کنند. در این تحقیق برای رسیدن به این هدف روزنامۀ خاطرات عین&zwnj;السلطنه برگزیده شد؛ این خاطرات از اواسط حکومت ناصر&zwnj;الدین شاه آغاز شده و تا اوایل دورۀ پهلوی دوم ادامه یافته است. این بازۀ زمانی حدوداً ۶۴&zwnj;ساله از علل اصلی انتخاب این خاطرات به&zwnj;عنوان منبع اصلی این تحقیق بود. دقت در صحت و ثبت جزئیات وقایع نیز از جمله دلایل دیگر برای انتخاب این خاطرات بود. در گام اول، با مطالعۀ متن خاطرات، داده&zwnj;های مربوط به دگرگونی ذهنی و عینی معماری خانگی از این خاطرات استخراج شدند. در گام دوم داده&zwnj;های استخراج شده گزینش و دسته&zwnj;بندی شدند و سوالاتی دربارۀ دگرگونی معماری خانگی در دورۀ قاجاریه شکل گرفت. گام سوم مربوط به فهم داده&zwnj;های دسته&zwnj;بندی شده و تلاش برای یافتن پاسخ سوالات پیش آمده در گام قبلی بود. این کار از طریق ارزیابی منابع درجۀ اول و دومی که به این فهم کمک می&zwnj;کردند صورت گرفت. در فصل ۱، پس از بیان زندگی&zwnj;نامۀ مختصری از عین&zwnj;السلطنه، روزنامۀ خاطراتش در مقام منبع اصلی این تحقیق معرفی و از نظر کتاب&zwnj;شناسی و سند&zwnj;شناسی بررسی شده است، سپس به&zwnj;اختصار به جایگاه خاطرات در تاریخ&zwnj;نویسی دورۀ قاجاریه پرداخته شده است. در ادامۀ این فصل، پس از ذکر نمونه&zwnj;هایی از توجه عین&zwnj;السلطنه به معماری خانگی، مثال&zwnj;هایی نیز از دگرگونی عینی و ذهنی معماری خانگی در این خاطرات ارائه شد. در پایان نیز خانه&zwnj;هایی که عین&zwnj;السلطنه در آنها زندگی کرده است معرفی شدند؛ چراکه در فصول بعدی تحقیق به&zwnj;کرات از این خانه&zwnj;ها یاد شده است. در فصل ۲ و ۳&nbsp; به ترتیب دگرگونی عینی و ذهنی مربوط به عمارت و حیاط و باغ بررسی شدند. برای پیش&zwnj;برد بحث در هر کدام از این فصول از منابع درجۀ اول و دوم بهره جسته شده است و در پایان هر باب از فصول یاد شده نیز در قسمتی با عنوان نتیجه، به&zwnj;طور جدا&zwnj;گانه، منابع درجۀ اول و دوم مربوط به فهم هر باب ارزیابی&zwnj; و موضوعات و پرسش&zwnj;هایی برای پیگیری در تحقیقات آتی مطرح شد. این تحقیق در نهایت از طریق ارائۀ و دسته&zwnj;بندی مطالبی که دربارۀ دگرگونی عینی و ذهنی معماری خانگی، در روزنامۀ خاطرات عین&zwnj;السلطنه، وجود دارد و بیان موضوعات و کلید&zwnj;واژگان و طرح پرسش&zwnj;هایی دربارۀ آنها مقدمات فهم دگرگونی عینی و ذهنی معماری خانگی، در دورۀ قاجاریه و اوایل پهلوی، را فراهم می&zwnj;کند.</p>
+<p>&nbsp;</p>
+<p>از این پیوند می&zwnj;توانید از طریق برنامۀ ادوبی کانکت به صورت مهمان در جلسه شرکت کنید:</p>
+<p dir="ltr"><a href="http://194.225.24.96/defa-memari-4">http://194.225.24.96/defa-memari-4</a></p>
+<p>&nbsp;</p>
+<p>دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
 <p>دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین&zwnj;السلطنه؛ ارزیابی منابع| مریم شائیان</p>
 <p>استاد راهنما: دکتر مهرداد قیومی بیدهندی<br />استاد مشاور: صبا مدنی</p>
 <p>داوران: دکتر محمد فلاح، دکتر مهنام نجفی</p>
-<p>زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۰ صبح<br /><br /></p>
-<p>معماری خانگی از جمله موضوعاتی است که در میان تحقیقات تاریخ معماری دورۀ قاجاریه کمتر به آن پرداخته شده است. بسیاری از بنا&zwnj;ها در دورۀ قاجاریه، دورۀ گذار، دستخوش دگرگونی شدند و خانه&zwnj;ها نیز از این قاعده مستثنی نماندند. بخشی ا&zwnj;ز این دگرگونی عینی و بخش دیگر آن ذهنی بود. خاطره&zwnj;نامه&zwnj;های به جا مانده از دورۀ قاجاریه از جمله منابعی هستند که می&zwnj;توانند ما را در پی بردن به این دگرگونی&zwnj;ها یاری کنند. در این تحقیق برای رسیدن به این هدف روزنامۀ خاطرات عین&zwnj;السلطنه برگزیده شد؛ این خاطرات از اواسط حکومت ناصر&zwnj;الدین شاه آغاز شده و تا اوایل دورۀ پهلوی دوم ادامه یافته است. این بازۀ زمانی حدوداً ۶۴&zwnj;ساله از علل اصلی انتخاب این خاطرات به&zwnj;عنوان منبع اصلی این تحقیق بود. دقت در صحت و ثبت جزئیات وقایع نیز از جمله دلایل دیگر برای انتخاب این خاطرات بود. در گام اول، با مطالعۀ متن خاطرات، داده&zwnj;های مربوط به دگرگونی ذهنی و عینی معماری خانگی از این خاطرات استخراج شدند. در گام دوم داده&zwnj;های استخراج شده گزینش و دسته&zwnj;بندی شدند و سوالاتی دربارۀ دگرگونی معماری خانگی در دورۀ قاجاریه شکل گرفت. گام سوم مربوط به فهم داده&zwnj;های دسته&zwnj;بندی شده و تلاش برای یافتن پاسخ سوالات پیش آمده در گام قبلی بود. این کار از طریق ارزیابی منابع درجۀ اول و دومی که به این فهم کمک می&zwnj;کردند صورت گرفت. در فصل ۱، پس از بیان زندگی&zwnj;نامۀ مختصری از عین&zwnj;السلطنه، روزنامۀ خاطراتش در مقام منبع اصلی این تحقیق معرفی و از نظر کتاب&zwnj;شناسی و سند&zwnj;شناسی بررسی شده است، سپس به&zwnj;اختصار به جایگاه خاطرات در تاریخ&zwnj;نویسی دورۀ قاجاریه پرداخته شده است. در ادامۀ این فصل، پس از ذکر نمونه&zwnj;هایی از توجه عین&zwnj;السلطنه به معماری خانگی، مثال&zwnj;هایی نیز از دگرگونی عینی و ذهنی معماری خانگی در این خاطرات ارائه شد. در پایان نیز خانه&zwnj;هایی که عین&zwnj;السلطنه در آنها زندگی کرده است معرفی شدند؛ چراکه در فصول بعدی تحقیق به&zwnj;کرات از این خانه&zwnj;ها یاد شده است. در فصل ۲ و ۳&nbsp; به ترتیب دگرگونی عینی و ذهنی مربوط به عمارت و حیاط و باغ بررسی شدند. برای پیش&zwnj;برد بحث در هر کدام از این فصول از منابع درجۀ اول و دوم بهره جسته شده است و در پایان هر باب از فصول یاد شده نیز در قسمتی با عنوان نتیجه، به&zwnj;طور جدا&zwnj;گانه، منابع درجۀ اول و دوم مربوط به فهم هر باب ارزیابی&zwnj; و موضوعات و پرسش&zwnj;هایی برای پیگیری در تحقیقات آتی مطرح شد. این تحقیق در نهایت از طریق ارائۀ و دسته&zwnj;بندی مطالبی که دربارۀ دگرگونی عینی و ذهنی معماری خانگی، در روزنامۀ خاطرات عین&zwnj;السلطنه، وجود دارد و بیان موضوعات و کلید&zwnj;واژگان و طرح پرسش&zwnj;هایی دربارۀ آنها مقدمات فهم دگرگونی عینی و ذهنی معماری خانگی، در دورۀ قاجاریه و اوایل پهلوی، را فراهم می&zwnj;کند.</p>
-<p>&nbsp;</p>
-<p>🔸از این پیوند می&zwnj;توانید از طریق برنامۀ ادوبی کانکت به صورت مهمان در جلسه شرکت کنید:</p>
-<p>http://194.225.24.96/defa-memari-4</p>
-<p>&nbsp;</p>
+<p>زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۰ صبح</p>
