--- a/_posts/2021-08-19-8Jsf.html
+++ b/_posts/2021-08-19-8Jsf.html
@@ -9,14 +9,13 @@ gallery:
   title: "" 
  
 --- 
+<p dir="ltr">▫️A Conversation with David Macauley: Illustrator of and for the Ages</p>
+<p dir="ltr">Award-winning author David Macaulay sits down in conversation with CHSA&rsquo;s Brian Bowen to discuss his process and examine his elegantly illustrated books laced with wry humor. Macaulay&rsquo;s architect-trained eye not only shows the reader how things are made but conveys complex technical information as to how and why they function. Macaulay&rsquo;s Building Series includes Castle, Cathedral, City, Pyramid, Underground, Unbuilding, Mill, Ship, Mosque and his latest publication Crossing on Time: Steam Engines, Fast Ships and a Journey to the New World.</p>
+<p>&nbsp;</p>
 <p>برگزاری گفتگوی مجازی با دیوید مکوئلی، تصویرگر و قصه&zwnj;نویسِ معماری</p>
 <p>میزبان: انجمنِ تاریخِ ساختمان</p>
-<p>زمان:&nbsp; ۱۷ سپتامبر ۲۰۲۱|&nbsp; ۲۶ شهریور ۱۴۰۰</p>
-<p>&nbsp;</p>
-<p>▫️A Conversation with David Macauley: Illustrator of and for the Ages</p>
-<p>Award-winning author David Macaulay sits down in conversation with CHSA&rsquo;s Brian Bowen to discuss his process and examine his elegantly illustrated books laced with wry humor. Macaulay&rsquo;s architect-trained eye not only shows the reader how things are made but conveys complex technical information as to how and why they function. Macaulay&rsquo;s Building Series includes Castle, Cathedral, City, Pyramid, Underground, Unbuilding, Mill, Ship, Mosque and his latest publication Crossing on Time: Steam Engines, Fast Ships and a Journey to the New World.</p>
-<p>&nbsp;</p>
+<p>زمان:&nbsp; ۱۷ سپتامبر ۲۰۲۱|&nbsp; ۲۶ شهریور ۱۴۰۰<br /><br /></p>
 <p>اطلاعات بیشتر:</p>
-<p>https://www.constructionhistorysociety.org/webinar</p>
+<p dir="ltr"><a href="https://www.constructionhistorysociety.org/webinar">https://www.constructionhistorysociety.org/webinar</a></p>
 <p>ثبت&zwnj;نام در این نشست:</p>
-<p>https://umn.zoom.us/webinar/register/WN_MxyyG2uSQnyMQqYeX5EUzg</p>
+<p dir="ltr"><a href="https://umn.zoom.us/webinar/register/WN_MxyyG2uSQnyMQqYeX5EUzg">https://umn.zoom.us/webinar/register/WN_MxyyG2uSQnyMQqYeX5EUzg</a></p>
