--- a/_posts/2021-06-23-whbZ.html
+++ b/_posts/2021-06-23-whbZ.html
@@ -1,21 +1,18 @@
 --- 
-title: "برگزاری سخنرانی مجازی: «مکان‌یابی دوبارهٔ مکان‌های مقدس: اورشلیم در سده‌های میانی متقدم اروپا»" 
+title: "«مکان‌یابی دوبارهٔ مکان‌های مقدس: اورشلیم در سده‌های میانی متقدم اروپا»؛ سخنرانی مجازی" 
 authors: asmaneh 
 types: news 
+tags: سده‌های میانی,قرون وسطی,اورشلیم,بیت المقدس,تاریخ شهر,مکان‌های مقدس,مکان مقدس,معماری دینی 
 featured: false
 slug: whbZ 
 --- 
-<p>برگزاری سخنرانی مجازی: &laquo;مکان&zwnj;یابی دوبارهٔ مکان&zwnj;های مقدس: اورشلیم در سده&zwnj;های میانی متقدم اروپا&raquo;</p>
-<p>سخنران: جولیا اسمیت&nbsp;</p>
-<p>میزبان:&nbsp; دانشگاه یورک</p>
-<p>زمان: ۲۴ ژوئن ۲۰۲۱| ۳ تیر ۱۴۰۰</p>
-<p>&nbsp;</p>
 <p dir="ltr">▪️Relocating the Holy Places: Jerusalem in Early Medieval Europe</p>
 <p dir="ltr">Discover how small portable objects enabled biblical sites to be relocated in Early Medieval Europe. Historian Julia Smith of the University of Oxford will discuss the various uses mobile objects were put to, as well as the significance attributed to them.</p>
 <p dir="ltr">Focusing mainly on Jerusalem, Historian Professor Julia Smith will examine the use of these objects within the Holy Land prior to the Arab conquest of 637 and in the Latin West in the centuries before the First Crusade.</p>
-<p>&nbsp;</p>
-<p>🔸ثبت&zwnj;نام:</p>
-<p dir="ltr">https://www.eventbrite.co.uk/e/relocating-the-holy-places-jerusalem-in-early-medieval-europe-tickets-156484209483</p>
-<p>&nbsp;</p>
-<p>🔸اطلاعات بیشتر:</p>
-<p dir="ltr">https://www.york.ac.uk/news-and-events/events/public-lectures/summer-2021/holy-places/</p>
+<p>- سخنران: جولیا اسمیت&nbsp;</p>
+<p>- میزبان:&nbsp; دانشگاه یورک</p>
+<p>- زمان: ۲۴ ژوئن ۲۰۲۱| ۳ تیر ۱۴۰۰</p>
+<p>- ثبت&zwnj;نام:</p>
+<p dir="ltr"><a href="https://www.eventbrite.co.uk/e/relocating-the-holy-places-jerusalem-in-early-medieval-europe-tickets-156484209483" target="_blank" rel="noopener">https://www.eventbrite.co.uk/e/relocating-the-holy-places-jerusalem-in-early-medieval-europe-tickets-156484209483</a></p>
+<p>- اطلاعات بیشتر:</p>
+<p dir="ltr"><a href="https://www.york.ac.uk/news-and-events/events/public-lectures/summer-2021/holy-places/" target="_blank" rel="noopener">https://www.york.ac.uk/news-and-events/events/public-lectures/summer-2021/holy-places/</a></p>
