--- a/_posts/2021-08-15-xcuw.html
+++ b/_posts/2021-08-15-xcuw.html
@@ -1,5 +1,5 @@
 --- 
-title: "برگزاری نشست مجازی: «تغییر بین‌المللی: زنان در معماری و چگونگی حمایت‌گری بیشتر صنعتِ [ساختمان]»" 
+title: "«تغییر بین‌المللی: زنان در معماری و چگونگی حمایت‌گری بیشتر صنعتِ [ساختمان]»| برگزاری نشست مجازی" 
 authors: asmaneh 
 types: news 
 tags: معماری,زنان 
@@ -10,15 +10,14 @@ gallery:
   title: "" 
  
 --- 
+<p dir="ltr">▫️Intentional Change: Women in Architecture and How the Industry Can Be More Supportive</p>
+<p dir="ltr">Perceptions regarding gender, gender roles, and gender identity have shaped the practice of architecture in ways that have resulted in bias, discrimination, and policies with negative outcomes for women &mdash; and the industry as a whole.&nbsp;</p>
+<p dir="ltr">In this Equity, Diversity and Inclusion (EDI) Committee-led panel discussion, our panelists will explore how these issues have impacted them, share their strategies for how to overcome them, and offer suggestions to promote change.&nbsp;&nbsp;</p>
+<p>&nbsp;</p>
+<p>اطلاعات بیشتر دربارۀ نشست:</p>
+<p dir="ltr"><a href="https://www.aiachicago.org/events/intentional-change-women-in-architecture-and-how-the-industry-can-be-more-supportive/#.YRdkkxQzbIU">https://www.aiachicago.org/events/intentional-change-women-in-architecture-and-how-the-industry-can-be-more-supportive/#.YRdkkxQzbIU</a></p>
+<p>ثبت&zwnj;نام در این نشست:</p>
+<p dir="ltr"><a href="https://us02web.zoom.us/webinar/register/WN_I8EaAcGPQRK2Grr9Dr-8Xw">https://us02web.zoom.us/webinar/register/WN_I8EaAcGPQRK2Grr9Dr-8Xw</a><br /><br /></p>
 <p>برگزاری نشست مجازی: &laquo;تغییر بین&zwnj;المللی: زنان در معماری و چگونگی حمایت&zwnj;گری بیشتر صنعتِ [ساختمان]&raquo;</p>
 <p>برگزارکننده: مؤسسۀ معماران امریکا در شیکاگو</p>
 <p>زمان: ۱۷ اوت ۲۰۲۱| ۲۶ مرداد ۱۴۰۰</p>
-<p>&nbsp;</p>
-<p>▫️Intentional Change: Women in Architecture and How the Industry Can Be More Supportive</p>
-<p>Perceptions regarding gender, gender roles, and gender identity have shaped the practice of architecture in ways that have resulted in bias, discrimination, and policies with negative outcomes for women &mdash; and the industry as a whole.&nbsp;</p>
-<p>In this Equity, Diversity and Inclusion (EDI) Committee-led panel discussion, our panelists will explore how these issues have impacted them, share their strategies for how to overcome them, and offer suggestions to promote change.&nbsp;&nbsp;</p>
-<p>&nbsp;</p>
-<p>اطلاعات بیشتر دربارۀ نشست:</p>
-<p>https://www.aiachicago.org/events/intentional-change-women-in-architecture-and-how-the-industry-can-be-more-supportive/#.YRdkkxQzbIU</p>
-<p>ثبت&zwnj;نام در این نشست:</p>
-<p>https://us02web.zoom.us/webinar/register/WN_I8EaAcGPQRK2Grr9Dr-8Xw</p>
