--- a/_posts/2021-08-09-cvGw.html
+++ b/_posts/2021-08-09-cvGw.html
@@ -21,5 +21,5 @@ slug: cvGw
 <p dir="ltr">- Letter of acceptance from the conference/session organizer(s).&nbsp;</p>
 <p dir="ltr">- Abstract of the paper to be presented.</p>
 <p>&nbsp;</p>
-<p>🔸اطلاعات بیشتر:</p>
-<p dir="ltr">https://www.historiansofislamicart.org/opportunities/hiaa-prizes/grabar-grants-and-fellowships</p>
+<p>اطلاعات بیشتر:</p>
+<p dir="ltr"><a href="https://www.historiansofislamicart.org/opportunities/hiaa-prizes/grabar-grants-and-fellowships">https://www.historiansofislamicart.org/opportunities/hiaa-prizes/grabar-grants-and-fellowships</a></p>
