--- a/_posts/2021-08-07-E5J9.html
+++ b/_posts/2021-08-07-E5J9.html
@@ -9,11 +9,6 @@ gallery:
   title: "" 
  
 --- 
-<p>فراخوان مقاله برای گردهمایی بین&zwnj;المللی انجمن ترویج زبان و ادب فارسی ایران&nbsp;</p>
-<p>میزبان: دانشگاه بیرجند</p>
-<p>مهلت ارسال مقالات: ۳۰ آذر ۱۴۰۰</p>
-<p>تاریخ برگزاری: ۱۴- ۱۹ اسفند ۱۴۰۰</p>
-<p>&nbsp;</p>
 <p>▫️محورهای گردهمایی:</p>
 <p>- ادبیات تطبیقی و پژوهش&zwnj;های میان&zwnj;رشته&zwnj;ای</p>
 <p>- انواع ادبی (غنایی، حماسی، نمایشی و ...)</p>
@@ -26,5 +21,9 @@ gallery:
 <p>- آموزش زبان فارسی</p>
 <p>- پژوهش زبان و ادبیات فارسی در گسترۀ جهان</p>
 <p>&nbsp;</p>
-<p>🔸اطلاعات بیشتر:</p>
-<p dir="ltr">http://www.ispl.ir/new-site/index.php/announcement/326-hamiyesh</p>
+<p>اطلاعات بیشتر:</p>
+<p dir="ltr"><a href="http://www.ispl.ir/new-site/index.php/announcement/326-hamiyesh">http://www.ispl.ir/new-site/index.php/announcement/326-hamiyesh</a><br /><br /></p>
+<p>فراخوان مقاله برای گردهمایی بین&zwnj;المللی انجمن ترویج زبان و ادب فارسی ایران&nbsp;</p>
+<p>میزبان: دانشگاه بیرجند</p>
+<p>مهلت ارسال مقالات: ۳۰ آذر ۱۴۰۰</p>
+<p>تاریخ برگزاری: ۱۴- ۱۹ اسفند ۱۴۰۰</p>
