--- a/_posts/2020-09-30-aPPm.html
+++ b/_posts/2020-09-30-aPPm.html
@@ -5,7 +5,7 @@ types: news
 featured: false
 slug: aPPm 
 --- 
-<p>نیاد میراث ایران، برای نخستین بار، پیوند دسترسی به سخنرانیِ پروفسور رابرت هیلنبرند در همایش این بنیاد، با موضوع &laquo;از پرسپولیس تا اصفهان: حفاظت از میراث فرهنگی&raquo;، را در اختیار علاقه&zwnj;مندان قرار داده است. سخنرانی او در این همایش، در تاریخ ۱۶ ژانویۀ ۲۰۱۵ و با عنوان &laquo;مرمت یادمان&zwnj;های سده&zwnj;های میانه در جهان ایرانی، به&zwnj;ویژه آسیای مرکزی&raquo; برگزار شد. رابرت هیلنبرند به پیشگامی در مطالعات هنر و معماری اسلامی شهره است. او هم&zwnj;چنین ریاست کمیتۀ علمی بنیاد میراث ایران را بر عهده دارد.</p>
+<p>بنیاد میراث ایران، برای نخستین بار، پیوند دسترسی به سخنرانیِ پروفسور رابرت هیلنبرند در همایش این بنیاد، با موضوع &laquo;از پرسپولیس تا اصفهان: حفاظت از میراث فرهنگی&raquo;، را در اختیار علاقه&zwnj;مندان قرار داده است. سخنرانی او در این همایش، در تاریخ ۱۶ ژانویۀ ۲۰۱۵ و با عنوان &laquo;مرمت یادمان&zwnj;های سده&zwnj;های میانه در جهان ایرانی، به&zwnj;ویژه آسیای مرکزی&raquo; برگزار شد. رابرت هیلنبرند به پیشگامی در مطالعات هنر و معماری اسلامی شهره است. او هم&zwnj;چنین ریاست کمیتۀ علمی بنیاد میراث ایران را بر عهده دارد.</p>
 <p>از میان آثار متعدد هیلنبرند، کتاب او در باب معماری اسلامی، که نخستین بار در&nbsp; سال ۱۹۹۴ در انتشارات دانشگاه ادینبرو منتشر شد، هنوز هم&zwnj;چون اثری مرجع شناخته می&zwnj;شود. در سال ۲۰۰۸، او به عنوان عضو آکادمی بریتانیا انتخاب شد و هم&zwnj;اکنون عضو متخصصِ دانشگاه&zwnj;های ادینبرو و سنت اندروز است. اخیراً در ۱۴ فوریۀ سال ۲۰۱۸، مخاطبان بنیاد میراث ایران، پذیرای سخنرانی دیگر از او با عنوان &laquo;معماری در نقاشی ایرانی دوران میانه: واقعیت یا خیال&raquo; بودند.</p>
 <p>&nbsp;</p>
 <p>برای مشاهدۀ این سخنرانی&zwnj;ها به پیوند&zwnj;های زیر مراجعه کنید:</p>
