--- a/_posts/2020-10-02-nbSm.html
+++ b/_posts/2020-10-02-nbSm.html
@@ -4,7 +4,24 @@ authors: asmaneh
 types: news 
 tags: نمایشگاه,حکمت,کتاب,ایران,صحافی 
 featured: false
+featureImg: "/assets/img/posts/nbSm.jpg" 
 slug: nbSm 
+gallery: 
+- image_path: "/assets/img/posts/nbSm.jpg" 
+  title: "«در مکتب حکمت: صحافی کتاب در ایران (۱۵۷۵- ۱۸۹۰)»؛ نمایشگاه مجازی" 
+- image_path: "undefined" 
+  title: "" 
+- image_path: "undefined" 
+  title: "" 
+- image_path: "undefined" 
+  title: "" 
+- image_path: "undefined" 
+  title: "" 
+- image_path: "undefined" 
+  title: "" 
+- image_path: "undefined" 
+  title: "" 
+ 
 --- 
 <p dir="ltr">▪️Online Exhibition: In the School of Wisdom: Persian Bookbinding ca. 1575-1890</p>
 <p dir="ltr">Curated by: Matthew Elliott Gillman -- Ph.D. candidate, Department of Art History &amp; Archaeology, Columbia University</p>
