--- a/_posts/2020-08-22-KK23.html
+++ b/_posts/2020-08-22-KK23.html
@@ -46,7 +46,7 @@ gallery:
 <div>
 <p dir="ltr">Ebadollah Bahari.&nbsp;Bihzad, Master of Persian Painting. London: I.B. Tauris Publishers, 1996, 151.</p>
 </div>
-<div>۷. نسخه در کتابخانۀ مدرسۀ سپهسالار (شهید مطهری) تهران نگهداری می&lrm;شود. همچنین نک:</div>
+<div>۷. نسخه در کتابخانۀ مدرسۀ سپهسالار (شهید مطهری) تهران نگهداری می&zwnj;شود. همچنین نک:</div>
 <div>
 <p dir="ltr">Ivan Stchoukine.&nbsp;Les peintures des manuscrits safavis de 1502 à 1587. Paris: P. Geuthner, 1959, Plate LXXIV.</p>
 </div>
