--- a/_posts/2021-01-17-fmai.html
+++ b/_posts/2021-01-17-fmai.html
@@ -3,7 +3,12 @@ title: "معرفی کتاب مفاهیم بنیادی زیباشناسی"
 authors: koushei 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/fmai.jpg" 
 slug: fmai 
+gallery: 
+- image_path: "/assets/img/posts/fmai.jpg" 
+  title: "معرفی کتاب مفاهیم بنیادی زیباشناسی" 
+ 
 --- 
 <div>
 <div>
