--- a/_posts/2020-09-01-qeVd.html
+++ b/_posts/2020-09-01-qeVd.html
@@ -3,7 +3,12 @@ title: "سخنی در باب کتاب «گلچین زیبایی‌شناسیِ»
 authors: koushei 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/qeVd.jpg" 
 slug: qeVd 
+gallery: 
+- image_path: "/assets/img/posts/qeVd.jpg" 
+  title: "سخنی در باب کتاب «گلچین زیبایی‌شناسیِ» انتشارات بلک‌وِل" 
+ 
 --- 
 <div>
 <div>
