--- a/_posts/2020-09-01-KNsk.html
+++ b/_posts/2020-09-01-KNsk.html
@@ -3,7 +3,12 @@ title: "درباره کتاب پاولی جدید و تکمله‌های آن"
 authors: koushei 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/KNsk.jpg" 
 slug: KNsk 
+gallery: 
+- image_path: "/assets/img/posts/KNsk.jpg" 
+  title: "درباره کتاب پاولی جدید و تکمله‌های آن" 
+ 
 --- 
 <p>یکی از منابع مرجع در شناخت عصر باستان (یونان و روم) و تأثیر آن بر اندیشه غربی در سده&zwnj;های بعدی، کتاب پاولی جدید (Brill&rsquo;s New Pauly) است.<br />آگوست پاولی[۱] (۱۷۹۶- ۱۸۴۵ م.)، دانشمند آلمانیِ متخصص در زبان&zwnj;های کلاسیک، در سال ۱۸۳۷ م. تدوین دائرة&zwnj;المعارفی درباره مطالعات عصر باستان کلاسیک (Realencyclop&auml;die der classischen Altertumswissenschaft) را آغاز می&zwnj;کند. او پیش از چاپ جلد چهارم این اثر درمی&zwnj;گذرد و ویراست نخست این کتاب در شش جلد (۱۸۳۷- ۱۸۵۲ م.) با ویراستاری دو تن از همکاران[۲] او تکمیل می&zwnj;شود.</p>
 <p>در سال ۱۸۹۰ م. گئورگ ویسوا[۳] (۱۸۵۹- ۱۹۳۱ م.)، عهده&zwnj;دار کاری بلندپروازانه در تدوین ویراست تازه&zwnj;ای از این اثر می&zwnj;شود. این ویراست تازه با تکمله&zwnj;ها و جلدی برای نمایه&zwnj;ها، بالغ بر هشتاد و چهار جلد است. تهیه و انتشار مجلدات این ویراست در سال ۱۹۸۰ م. پایان می&zwnj;یابد (فهرست عناوین جلدهای مختلف در&nbsp;<a href="https://en.wikipedia.org/wiki/Realencyclop%C3%A4die_der_classischen_Altertumswissenschaft#Der_Kleine_Pauly,_Der_Neue_Pauly_and_Brill%E2%80%99s_New_Pauly" target="_blank" rel="noopener">اینجا</a>&nbsp;آمده و نسخه پی&zwnj;دی&zwnj;اف این جلدها از&nbsp;<a href="http://gen.lib.rus.ec/search.php?req=Realencyclop%C3%A4die+der+classischen+Altertumswissenschaft&amp;open=0&amp;res=100&amp;view=simple&amp;phrase=1&amp;column=def" target="_blank" rel="noopener">اینجا</a>&nbsp;قابل دریافت است). چنان که پیداست این اثر محصول تلاش سه نسل از دانشمندان و متخصصان عصر باستان کلاسیک بوده است و مدخل&zwnj;های بسیار آن، بازتابی است از تنوع رویکردها و پیشرفت&zwnj;های دانش ما درباره جهان یونان و روم باستان و مناطق همجوار آنها.<br />در فاصله سال&zwnj;های ۱۹۹۶ تا ۲۰۰۳ نسخه روزآمدی از این اثر با عنوان Der Neue Pauly در پانزده جلد (۱۸ مجلد) به همراه جلدی برای نمایه&zwnj;ها تدوین می&zwnj;شود (در سال&zwnj;های بعد تکمله&zwnj;هایی نیز برای این نسخه فراهم آمده است). مشخصات کتاب&zwnj;شناسیِ این ویراست چنین است:</p>
