--- a/_posts/2020-09-01-9YxX.html
+++ b/_posts/2020-09-01-9YxX.html
@@ -3,7 +3,12 @@ title: "معرفی کتاب «خطابۀ عربی: هنر و کارکرد»"
 authors: koushei 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/9YxX.jpg" 
 slug: 9YxX 
+gallery: 
+- image_path: "/assets/img/posts/9YxX.jpg" 
+  title: "معرفی کتاب «خطابۀ عربی: هنر و کارکرد»" 
+ 
 --- 
 <div>
 <div>
