--- a/_posts/2020-09-01-8DNM.html
+++ b/_posts/2020-09-01-8DNM.html
@@ -3,7 +3,12 @@ title: "معرفی کتاب «هنر اسلامی چیست»، نوشتۀ وند
 authors: koushei 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/8DNM.jpg" 
 slug: 8DNM 
+gallery: 
+- image_path: "/assets/img/posts/8DNM.jpg" 
+  title: "معرفی کتاب «هنر اسلامی چیست»، نوشتۀ وندی شاو" 
+ 
 --- 
 <div>
 <div>
