--- a/_posts/2020-05-15-V7uG.html
+++ b/_posts/2020-05-15-V7uG.html
@@ -1,37 +1,35 @@
---- 
-title: "نسخۀ گِران و کاشفِ کُلاهِ کَلان" 
-authors: soltani 
-types: blog 
+---
+title: "نسخۀ گِران و کاشفِ کُلاهِ کَلان"
+authors: soltani
+types: blog
 featured: false
-featureImg: "/assets/img/posts/V7uG.jpg" 
-slug: V7uG 
-gallery: 
-- image_path: "/assets/img/posts/V7uG.jpg" 
-  title: "نسخۀ گِران و کاشفِ کُلاهِ کَلان" 
-- image_path: "/assets/img/posts/V7uG-1.jpg" 
-  title: "تصویر ۱: برگی از کاپوس‌نامه با یک نگاره، Ernst Kuhnel. “Die Kunst Persiens Unter den Buyiden”. P. 88." 
-- image_path: "/assets/img/posts/V7uG-2.jpg" 
-  title: "تصویر ۲: دست‌خط ریچارد فرای: من همیشه گفتم [گفته‌ام] که از قدیم دو تا تمدن در منطقه آسای [آسیا] اهمیت داشت. یکی چینی بود و دیگر ایرانی. اما ایران امروز نیست. البته ایران بزرگ بود یعنی از مجارستان تا مغولستان و چین غربی و از هند تا بین النهرین و در آن سرزمین چند خورده [خرده] فرهنگ مثل ساکا، سُغدی و غیره موجود بودند. و چنان که مغول‌ها وابستگی به چین داشت [داشتند] همچنین ترک‌ها ارتباط به ایران بود. [با ایرانیان ارتباط داشتند]. محمود کاسغری [کاشغری] نویست [نوشت] کلاه بیدن[بدون] سر و ترک بیدون [بدون] تاجک[ تاجیک] وجود ندارد. ریچارد فرایِ ایراندوست عکس از گنیجنۀ پژوهشی ایرج افشار" 
-- image_path: "/assets/img/posts/V7uG-3.jpg" 
-  title: "تصویر ۳: ریچارد نلسن فرای" 
-- image_path: "/assets/img/posts/V7uG-4.jpg" 
-  title: "تصویر ۴: آغاز نسخۀ کاپوس‌نامه و یکی از برگ‌های آن، مجتبی مینوی. «کاپوس‌نامۀ فرای: تمرینی در فن تزویرشناسی». ص ۱۸۲." 
-- image_path: "/assets/img/posts/V7uG-5.jpg" 
-  title: "تصویر ۵: برگی از کاپوس‌نامه، ریچارد فرای. «کتاب‌های اسلامی ساختگی از ایران». ص ۱۹۸." 
-- image_path: "/assets/img/posts/V7uG-6.jpg" 
-  title: "تصویر ۶: برگی از کاپوس‌نامه با یک نگاره، Gaston Wiet. L’Art de l’Islam iranien à l’Exposition de Paris". p. 95." 
-- image_path: "/assets/img/posts/V7uG-7.jpg" 
-  title: "تصویر ۷: برگی از کاپوس‌نامه با یک نگاره، Gaston Wiet. L’Art de l’Islam iranien à l’Exposition de Paris". p. 95." 
-- image_path: "/assets/img/posts/V7uG-8.jpg" 
-  title: "تصویر ۸: والتا برونو هنینگ" 
-- image_path: "/assets/img/posts/V7uG-9.jpg" 
-  title: "تصویر ۹: دست‌خط ریچارد فرای: در ایران همیشه در یاد من سخانهای [سخن‌های] رودکی می ماند: هیچ شادی نیست اندر این جهان/ بهتر از دیدار روی دوستان خیلی خوش حال شدم از بازگشت به وطن خود یعنی ایران‌زمین و امیدوارم که خدا به من چند سال دیگر [عمر] بدهد برای خدمت ایران. عکس از گنیجنۀ پژوهشی ایرج افشار" 
-- image_path: "/assets/img/posts/V7uG-10.jpg" 
-  title: "تصویر ۱۰: آرتر پوپ" 
-- image_path: "undefined" 
-  title: "" 
- 
---- 
+featureImg: "/assets/img/posts/V7uG.jpg"
+slug: V7uG
+gallery:
+- image_path: "/assets/img/posts/V7uG.jpg"
+  title: "نسخۀ گِران و کاشفِ کُلاهِ کَلان"
+- image_path: "/assets/img/posts/V7uG-1.jpg"
+  title: "تصویر ۱: برگی از کاپوس‌نامه با یک نگاره، Ernst Kuhnel. “Die Kunst Persiens Unter den Buyiden”. P. 88."
+- image_path: "/assets/img/posts/V7uG-2.jpg"
+  title: "تصویر ۲: دست‌خط ریچارد فرای: من همیشه گفتم [گفته‌ام] که از قدیم دو تا تمدن در منطقه آسای [آسیا] اهمیت داشت. یکی چینی بود و دیگر ایرانی. اما ایران امروز نیست. البته ایران بزرگ بود یعنی از مجارستان تا مغولستان و چین غربی و از هند تا بین النهرین و در آن سرزمین چند خورده [خرده] فرهنگ مثل ساکا، سُغدی و غیره موجود بودند. و چنان که مغول‌ها وابستگی به چین داشت [داشتند] همچنین ترک‌ها ارتباط به ایران بود. [با ایرانیان ارتباط داشتند]. محمود کاسغری [کاشغری] نویست [نوشت] کلاه بیدن[بدون] سر و ترک بیدون [بدون] تاجک[ تاجیک] وجود ندارد. ریچارد فرایِ ایراندوست عکس از گنیجنۀ پژوهشی ایرج افشار"
+- image_path: "/assets/img/posts/V7uG-3.jpg"
+  title: "تصویر ۳: ریچارد نلسن فرای"
+- image_path: "/assets/img/posts/V7uG-4.jpg"
+  title: "تصویر ۴: آغاز نسخۀ کاپوس‌نامه و یکی از برگ‌های آن، مجتبی مینوی. «کاپوس‌نامۀ فرای: تمرینی در فن تزویرشناسی». ص ۱۸۲."
+- image_path: "/assets/img/posts/V7uG-5.jpg"
+  title: "تصویر ۵: برگی از کاپوس‌نامه، ریچارد فرای. «کتاب‌های اسلامی ساختگی از ایران». ص ۱۹۸."
+- image_path: "/assets/img/posts/V7uG-6.jpg"
+  title: "تصویر ۶: برگی از کاپوس‌نامه با یک نگاره، Gaston Wiet. L’Art de l’Islam iranien à l’Exposition de Paris. p. 95."
+- image_path: "/assets/img/posts/V7uG-7.jpg"
+  title: "تصویر ۷: برگی از کاپوس‌نامه با یک نگاره، Gaston Wiet. L’Art de l’Islam iranien à l’Exposition de Paris. p. 95."
+- image_path: "/assets/img/posts/V7uG-8.jpg"
+  title: "تصویر ۸: والتا برونو هنینگ"
+- image_path: "/assets/img/posts/V7uG-9.jpg"
+  title: "تصویر ۹: دست‌خط ریچارد فرای: در ایران همیشه در یاد من سخانهای [سخن‌های] رودکی می ماند: هیچ شادی نیست اندر این جهان/ بهتر از دیدار روی دوستان خیلی خوش حال شدم از بازگشت به وطن خود یعنی ایران‌زمین و امیدوارم که خدا به من چند سال دیگر [عمر] بدهد برای خدمت ایران. عکس از گنیجنۀ پژوهشی ایرج افشار"
+- image_path: "/assets/img/posts/V7uG-10.jpg"
+  title: "تصویر ۱۰: آرتر پوپ"
+
+---
 <p>می&zwnj;گویند که در ماه ژوئیۀ سال ۱۹۵۳/ ۱۳۳۲ ریچارد نِلسن فِرایِ [۱]&nbsp;ایراندوست&nbsp;(تصویر ۲) و از خوش&zwnj;نام&zwnj;ترین ایران&zwnj;شناسان غربی که دربارۀ ایران تحقیقات ارزشمندی انجام داده است و سال&zwnj;ها محققان از خوان مطالعاتش بهره&zwnj;مند هستند ایران را به مقصد آمریکا در حالی ترک کرد که یکی از با ارزش&zwnj;&zwnj;ترین نسخِ خطیِ منثورِ زبانِ فارسی را مخفیانه و بدون اجازه در چمدانش داشت.</p>
 <p>ارزش تحقیقات فرای و ایران&zwnj;دوستی&zwnj;اش بر کسی پوشیده نیست. او خدمات مهمی در گسترش مطالعات ایران&zwnj;شناسانه انجام داد و تألیفات ارزنده و مهمی در حوزه&zwnj;های مختلف مطالعات ایرانی دارد. جنجال وصیتش برای دفن در اصفهان و ماجراهای پیش&zwnj;آمده، هنوز از ذهنمان خارج نشده است و همچنان شرمگینیم که پیکرِ بی&zwnj;جان او هفتاد و چند روز معطلِ بازی&zwnj;هایِ سیاسی در ایران بود. ریچارد فرای ۶۰ سال از عمرش را به کار و تحقیق دربارۀ ایران اختصاص داد و &nbsp;به زبان&zwnj;های روسی و آلمانی و فرانسوی و عربی و فارسی و پشتو و ازبکی و ترکی مسلط بود. (تصویر ۳) ارتباطش با ایران&zwnj;شناسان ایرانی و فرنگی و بنیادهای مطالعات ایران در دانشگاه&zwnj;های مختلفِ غرب، خصوصاً آمریکا، از او محققی بی&zwnj;بدیل در حوزه&zwnj;های مختلف ایران&zwnj;شناسی ساخته است. خدایش بیامرزاد.</p>
 <p>فارغ از بحث دربارۀ صاحب اصلی چمدانی که از ایران به آمریکا برده شد و در ادامه به آن هم خواهم پرداخت، برگردیم سراغ محتوای چمدان. چمدان حاوی نسخۀ خطی&nbsp;قابوس&zwnj;نامه&zwnj;ای بود تحریر ۲۷ جمادی&zwnj;الاول سال ۴۸۳ ه.ق [۲]&nbsp;(تصویر ۴ و ۵) یعنی هم&zwnj;عصر با تألیف کتاب با ۱۰۹ نگارۀ بی&zwnj;مانند از زمانه&zwnj;&zwnj;ای که اطلاعاتی دربارۀ نگارگریِ آن دوره نداریم. (تصویر ۱) مؤسسۀ &laquo;مطالعات خاور نزدیک&raquo;[۳] کتاب را برای موزۀ هنرهای زیبای سین&zwnj;سیناتی [۴] و بنیاد کِوُرکیانِ نیویورک [۵]&nbsp;خریده بود و فرای پس از انتقال نسخه به آمریکا چندین مقاله دربارۀ آن منتشر کرد و در یک کنفرانس دربارۀ آن سخنرانی کرد. مرحوم ایرج افشار هم ترجمۀ فارسی یکی از نوشته&zwnj;های فرای دربارۀ این نسخه را در سال&nbsp; ۱۳۳۳ در مقاله&zwnj;ای در مجلۀ&nbsp;فرهنگ ایران&zwnj;زمین&nbsp;منتشر کرد. فرای در این مقاله دربارۀ صاحبان فعلی نسخه و ارزش&zwnj;های لغوی و هنری&zwnj;اش سخن گفته است. [۶]&nbsp;(تصویر ۶ و ۷) از جمله اینکه نگاره&zwnj;های موجود در کتاب از قدیمی&zwnj;ترین نگاره&zwnj;های ایرانی به دست آمده است. ضمناً فرای بر اساس نحوۀ نگارش نام مؤلف، نام صحیح کتاب را&nbsp;کاپوس&zwnj;نامه&nbsp;دانسته است. انتشار مقالات فرای سبب معرفی این کتاب و نگاره&zwnj;هایش شد و تا سال&zwnj;ها بعد منبع مطالعات مختلف. مثلاً ارنست کونل [۷] مورخ آلمانی هنر اسلامی در مقاله&zwnj;ای در سال ۱۹۵۶ دربارۀ هنر دورۀ آل&zwnj;بویه صفحه&zwnj;ای از این کتاب و نگاره&zwnj;ای از آن را به عنوان نمونۀ بسیار مهمی از نگارگری در دوران اسلامی آورده است. [۸]&nbsp;(تصویر ۱)</p>
