--- a/_posts/2018-07-26-5639.html
+++ b/_posts/2018-07-26-5639.html
@@ -1,15 +1,15 @@
---- 
-title: "عادت جدید پادشاه" 
-authors: tohidi 
-types: blog 
+---
+title: "عادت جدید پادشاه"
+authors: tohidi
+types: blog
 featured: false
-featureImg: "/assets/img/posts/5639.jpg" 
-slug: 5639 
-gallery: 
-- image_path: "/assets/img/posts/5639.jpg" 
-  title: "عادت جدید پادشاه" 
- 
---- 
+featureImg: "/assets/img/posts/5639.jpg"
+slug: 563q 
+gallery:
+- image_path: "/assets/img/posts/5639.jpg"
+  title: "عادت جدید پادشاه"
+
+---
 <p>مظفرالدین&zwnj;شاه بار دومی که عزم فرنگ کرده بود، از رشت رد شد. در سفرنامه&zwnj;اش وقتی به رشت می&zwnj;رسد می&zwnj;گوید &laquo;از سمت مشرق شهر وارد شدیم، دور زدیم از خیابان ناصری و آمدیم&raquo;. دقیقاً همان کاری که پدرش ناصرالدین&zwnj;شاه هم به هنگام ورود به رشت می&zwnj;کرد: &laquo;دور می&zwnj;زد&raquo;. شاه قاجار که از سمت قزوین می&zwnj;آمد، از پل عراق در جنوب شرقی شهر وارد می&zwnj;شد و باید به دارالحکومه در شمال شهر می&zwnj;رفت. با این اوصاف منطقی&zwnj;تر بود از مسیری برود که با کمی تسامح منطبق بر یک خط قطری است که جنوب شرقی را به شمال میانی وصل می&zwnj;کند؛ مسیری که در رشت قاجاری می&zwnj;شد گذرگاه&zwnj;های مستقر در محلات خمیران زاهدان و بازار. ولی شاه قاجار به جای طی کردن آن خط قطری که وتر یک مثلث فرضی است، از مسیری می&zwnj;رفت که منطبق بر دو ضلع قائمۀ مثلث است؛ یعنی جادۀ ناصریه و محلۀ کیاب.</p>
 <p>ناصرالدین&zwnj;شاه نیز در روزنامۀ خاطرات سفرش به گیلان، با دقت بیشتری نسبت به پسرش نوشته &laquo;از توی شهر نرفته، از کنار شهر افتادیم به راه ناصریه، راه باریکی بود&raquo; و بعد در ادامۀ راه وقتی می&zwnj;گوید &laquo;از طرف مغرب شهر می&zwnj;رفتیم. بعد رو به مشرق کرده داخل شهر شدیم&raquo; حرف خودش را هم دقیق&zwnj;تر می&zwnj;کند. برای آن همه مسافر از راه رسیده این همه راه اضافه چه علتی می&zwnj;توانست داشته باشد؟ حال آنکه ناصرالدین&zwnj;شاه می&zwnj;گوید راه ناصریه راه باریکی بود و احتمالاً ظرفیت مسیر انتخابی برای عبور جمعیت ملازمان شاه چندان تعیین&zwnj;کننده نبوده است.</p>
 <p>چه نقشۀ سال ۱۲۸۷ق ذوالفقارخان مهندس را نگاه کنیم و چه در توصیف&zwnj;های دو شاه قاجار در سفرنامه&zwnj;هایشان دقیق شویم، مشخص می&zwnj;شود که راه ناصریه و محلۀ کیاب مسیری خوش&zwnj;منظر و مسرت&zwnj;بخش برای مقام همایونی بوده&zwnj;اند. کسی که از این مسیر از میان شلتوک&zwnj;زارها می&zwnj;گذشت، عمارت ناصریه و باغ اطرافش، عمارت باغ صفا و باغ محتشم&zwnj;الملک و عمارت کلاه&zwnj;فرنگی&zwnj;اش را از دور می&zwnj;دید. یا به قول مظفرالدین&zwnj;شاه از راهی می&zwnj;گذشت که اطرافش &laquo;به عین اطراف شهرهای فرنگستان&raquo; بود. در ادامۀ مسیر محلۀ کیاب هم جزو محلات اعیان&zwnj;نشین شهر بود. ویژگی&zwnj;ای که دو محلۀ خمیران زاهدان و بازار نداشتند. ناصرالدین&zwnj;شاه با عبور از محلۀ کیاب &laquo;خانه&zwnj;های خوب&raquo; را می&zwnj;دید و از &laquo;کوچه&zwnj;های خوب&raquo; عبور می&zwnj;کرد. مظفرالدین&zwnj;شاه نیز &laquo;شهری قشنگ با بام&zwnj;های همه سفالی&raquo; را تماشا می&zwnj;کرد و با گذر از &laquo;سبزه&zwnj;میدانی خوب&raquo; به سمت دارالحکومه می&zwnj;رفت.</p>
