--- a/_posts/2021-11-06-rjNZS.html
+++ b/_posts/2021-11-06-rjNZS.html
@@ -7,9 +7,9 @@ featured: false
 slug: rjNZS 
 gallery: 
 - image_path: "/assets/img/posts/rjNZS-1.jpg" 
-  title: "" 
+  title: "تصویر ۱. Guldarra Stupa, Weaveravel (https://commons.wikimedia.org/wiki/File:Guldara_stupa.jpg)" 
 - image_path: "/assets/img/posts/rjNZS-3.png" 
-  title: "" 
+  title: "تصویر ۲ آبدان، سوریه، میانهٔ سدهٔ سیزدهم م.، برنج با مرصع نقره، ۴۴.۷ در ۳۶.۵ سانتی‌متر. گالری هنر فریر" 
  
 --- 
 <p dir="RTL"><span lang="AR-SA">عمارت تاریخ معماری پر از اشباحی است که خواب را از چشم ساکنانش می&zwnj;ربایند. ویمالین روجیواچاراکول </span><span dir="LTR">(2010)</span><span lang="AR-SA"> در مقاله&zwnj;اش به یکی از اشباحی پرداخته که بیشتر در اتاق مطالعهٔ او پرسه می&zwnj;زند: &laquo;آسیا&raquo;. به نظر او، از زمان جیمز فرگوسن تا حال،&zwnj; این مفهومِ دردسرساز مانع دیدن پیوندها و گسست&zwnj;ها و واقعیت&zwnj;های تاریخی بسیاری در این پهنهٔ گستردهٔ جغرافیایی شده است. به&zwnj;گفتهٔ او، در جهان پس از ادوارد سعید ما به&zwnj;خوبی می&zwnj;دانیم که مفاهیم جغرافیایی-فرهنگی&zwnj;ای نظیر &laquo;آسیا&raquo; تا چه اندازه با شرق&zwnj;شناسی و دانش استعماری و امپریالیسم در ارتباط است. اما به&zwnj;رغم این آگاهی، چنین مفاهیمی هنوز دست از سر مورخان برنداشته است.</span></p>
