--- a/_posts/2020-05-26-CDfB6.html
+++ b/_posts/2020-05-26-CDfB6.html
@@ -25,4 +25,4 @@ gallery:
 <p><a href="../posts/posts/posts/fjfad/" target="_blank" rel="noopener">قسمت دوم: در پروژۀ عظیم غول&zwnj;ها</a></p>
 <p><a href="../posts/posts/t2qrm/">قسمت سوم: ساختنِ سرِ آفرودیت در زعفرانیه</a></p>
 <p><a href="../posts/xsvsw/">قسمت چهارم: با دانشگاهی&zwnj;ها قاطی می&zwnj;شود</a></p>
-<p>قسمت پنجم: با دانشگاهی&zwnj;ها قاطی و قاطی&zwnj;تر می&zwnj;شود</p>
+<p><a href="../posts/64rxs/">قسمت پنجم: با دانشگاهی&zwnj;ها قاطی و قاطی&zwnj;تر می&zwnj;شود</a></p>
