--- a/_posts/2020-10-02-S2iA.html
+++ b/_posts/2020-10-02-S2iA.html
@@ -7,7 +7,7 @@ slug: S2iA
 --- 
 <div>
 <div>
-<p><strong>به سمانه محسنی</strong></p>
+<p>به سمانه محسنی</p>
 <p>در قسمت قبل خواندیم که معمار مصری ایمحوتب و شاگردش انجیب پس از فرار از دست آنوبیس گرگنما به کمک پریناز به دخمه&zwnj;ی قیومه&zwnj;ی طبیب گریختند و پرسش نفرین شده&zwnj;شان درباره&zwnj;ی کانسپت کانسپت&zwnj;ها را به او عرضه کردند. او هم با بهره از آخرین تکنولوژی&zwnj;ها به آن&zwnj;ها نشان داد که در زمان و مکان غلطی به دنبال پاسخ می&zwnj;گردند و در این زمانه جز مشتی حرف سطحی و انواع درهم&zwnj;ریختگی&zwnj;ها و بلبشو&zwnj;ها چیز دیگری عایدشان نمی&zwnj;شود. پس معجونی به دست آمده از عصاره&zwnj;&zwnj;ی پایان نامه&zwnj;های دورۀ قاجاریه به آن&zwnj;ها داد و به آن زمان فرستادشان&nbsp; تا در آن&zwnj;جا از یک استاد معماری سوالشان را بپرسند. شاید جوابی برای این آن پیدا کنند و بتوانند به مصر بازگردند. در ادامه:</p>
 <p>بعد از سرگیجه&zwnj;ای طولانی وقتی توانستند اطرافشان را تشخیص دهند خود را وسط آجرهای خانه&zwnj;ای در حال ساخت یافتند. ایوان سوی دیگر حیاط نیمه&zwnj;کاره بود و درها و ارسی&zwnj;ها هم گوشه&zwnj;ی آن چیده شده و هنوز نصب نشده بود. خانه نسبتا کوچک بود و به نظر کسی در آن نبود. پریناز که نمی&zwnj;دانست حالا چطور باید برگردد قبل از همه بلند شد و به انجیب و ایمحوتب کمک کرد تا بایستند. ایمحوتب خاک تنش را تکاند و انجیب چندین بار از پریناز تشکر کرد. هر سه سری به اطراف چرخاندند و کمی در خانه قدم زدند. ایمحوتب گفت: &laquo; خب حالا باید هرچه زودتر استاد معمار را پیدا کنیم. طولی نمی&zwnj;کشد که آنوبیس وحشی این&zwnj;جا هم ردمان را بگیرد. او می&zwnj;تواند در زمان و مکان بو بکشد و سراغمان بیاید&raquo; جمله&zwnj;اش تمام نشده بود که صدای دلنواز تار در فضا طنین انداخت. به یکدیگر نگاه کردند و به دنبال منبع صدا گشتند. پریناز با دست به گوشه&zwnj;ی ایوان پشت درهای چیده شده اشاره کرد. کسی بر زمین نشسته بود و تار می&zwnj;زد.</p>
 <p>به سمت او رفتند. دستاری به سر انداخته بود و زخمه می&zwnj;زد. متوجه حضورشان شد اما سرش را بالا نیاورد و تا پایان قطعه را نواخت و خواند: نادیده رخت ای گل جانم شد دلم از دست / بی دامان او رفته جانم سامانم از دست / تو عشق سرشار منی / تو نازنین یار منی / تو نازنین ماه منی / من که می&zwnj;میرم چرا دور از منی / خدا / من که می&zwnj;میرم چرا دور از منی.[۱]<br />&nbsp;قطعه که تمام شد سر بلند کرد و ایستاد. زن میانسالی بود خوش&zwnj;چهره و با وقار. سلام کرد و گفت: &laquo; من تاج&zwnj;السلطنه هستم. صفا آوردید به خانه&zwnj;ی محقر من. مایه&zwnj;ی شرمساری است که چنین درهم&zwnj;ریخته است و اسباب پذیرایی مهیا نیست&raquo;. ایمحوتب ماجرایشان را شرح داد و گفت که به دنبال کانسپت کانسپت&zwnj;هاست و باید معمار خانه را ببیند. تاج&zwnj;السلطنه توضیح داد که او شاهزاده&zwnj;ای قاجاری و دختر ناصرالدین شاه است و خانه را کس دیگری می&zwnj;سازد اما چون فعلاً پولی برایش نمانده تا دستمزد معماران و بنایان را بدهد کار را متوقف کرده است و فقط گاهی می&zwnj;آید در این خانه ساز می&zwnj;زند تا در و دیوارش را ملال نگیرد. پریناز که این را شنید دیگر نتوانست تحمل کند و گفت: &laquo; به نظرم کاسه&zwnj;ای زیر نیم&zwnj;کاسه است. حالا یا قیومه&zwnj;ی طبیب ما را به جایی غیر از آن که قرار بود فرستاده یا این خانم چیزی را از ما پنهان می&zwnj;کند. مگر شاهزاده&zwnj;ی قاجاری بی&zwnj;پول می&zwnj;شود؟ مگر اصلاً زن قاجاری ساز می&zwnj;زند و برای خودش خانه می&zwnj;سازد؟ من عکس زنان قاجاری را دیده&zwnj;ام و کمی درباره&zwnj;شان می&zwnj;دانم. آن&zwnj;ها همه در اندرونی&zwnj;اند&raquo;.</p>
@@ -17,4 +17,14 @@ slug: S2iA
 </div>
 </div>
 <div>۱. تصنیفی منسوب به تاج&zwnj;السلطنه</div>
-<div>۲. خاطرات تاج&zwnj;السلطنه، به کوشش منصوره اتحادیه ( نظام مافی ) و سیروس سعدوندیان، نشر تاریخ ایران: مجموعه متون و اسناد تاریخی، کتاب هفتم. صفحه&zwnj;ی ۹۸ و ۹۹</div>
+<div>۲. خاطرات تاج&zwnj;السلطنه، به کوشش منصوره اتحادیه ( نظام مافی ) و سیروس سعدوندیان، نشر تاریخ ایران: مجموعه متون و اسناد تاریخی، کتاب هفتم. صفحه&zwnj;ی ۹۸ و ۹۹.</div>
+<div>&nbsp;</div>
+<div>
+<p><strong>قسمت&zwnj;های قبلی این داستان:</strong></p>
+<p><a href="../posts/posts/posts/posts/qgckh/" target="_blank" rel="noopener">قسمت اول: فرمان اوسیریس: در جستجوی کانسپتِ کانسپت&zwnj;ها</a></p>
+<p><a href="../posts/posts/posts/posts/fjfad/" target="_blank" rel="noopener">قسمت دوم: در پروژۀ عظیم غول&zwnj;ها</a></p>
+<p><a href="../posts/posts/posts/t2qrm/">قسمت سوم: ساختنِ سرِ آفرودیت در زعفرانیه</a></p>
+<p><a href="../posts/posts/xsvsw/">قسمت چهارم: با دانشگاهی&zwnj;ها قاطی می&zwnj;شود</a></p>
+<p><a href="../posts/64rxs/">قسمت پنجم: با دانشگاهی&zwnj;ها قاطی و قاطی&zwnj;تر می&zwnj;شود</a></p>
+<p><a href="../posts/cdfb6/">قسمت ششم: قیومۀ طبیب و داروی معجزه&zwnj;گر</a></p>
+</div>
