--- a/_posts/2021-11-06-rjNZS.html
+++ b/_posts/2021-11-06-rjNZS.html
@@ -3,7 +3,7 @@ title: "رؤیت‌پذیری اشباح عمارت تاریخ معماری در
 authors: mirnezami 
 types: blog 
 tags: مطالعات پس‌استعماری,شرق‌شناسی,معماری ایرانی,معماری اسلامی,ادوارد سعید,استعمارزدایی 
-featured: false
+featured: true
 slug: rjNZS 
 gallery: 
 - image_path: "/assets/img/posts/rjNZS-1.jpg" 
