--- a/_posts/2021-03-20-nYAB.html
+++ b/_posts/2021-03-20-nYAB.html
@@ -1,6 +1,6 @@
 --- 
-title: "سکونت در محله: روایتی از شکل‌گیری محلۀ دولت تهران در دورۀ ناصری| سمیرا فتحی، با مقدمۀ دکتر زهرا اهری" 
-authors: asmaneh 
+title: "سکونت در محله: روایتی از شکل‌گیری محلۀ دولت تهران در دورۀ ناصری| با مقدمۀ دکتر زهرا اهری" 
+authors: fathi 
 types: bap 
 categories: asmaneBooks 
 tags: محلۀ دولت تهران,تهران عصر ناصری,تاریخ شهر ایران,تهران,تهران قاجاری,سمیرا فتحی,زهرا اهری 
@@ -9,7 +9,7 @@ featureImg: "/assets/img/posts/nYAB.jpg"
 slug: nYAB 
 gallery: 
 - image_path: "/assets/img/posts/nYAB.jpg" 
-  title: "سکونت در محله: روایتی از شکل‌گیری محلۀ دولت تهران در دورۀ ناصری| سمیرا فتحی، با مقدمۀ دکتر زهرا اهری" 
+  title: "سکونت در محله: روایتی از شکل‌گیری محلۀ دولت تهران در دورۀ ناصری| با مقدمۀ دکتر زهرا اهری" 
  
 --- 
 <p>این کتاب پژوهشی در باب تاریخ معماری و شهرسازی تهران در زمان ناصرالدین شاه قاجار است. در اواخر سدۀ سیزدهم هجری، گسترش تهران و شکل&zwnj;گیری محله&zwnj;های مسکونی جدید در دارالخلافۀ ناصری فرصتی تازه به بانیان معماری و عاملان شهرسازی داد تا نیازها و خواست&zwnj;های نوظهور جامعۀ در حال دگرگونی ایران را در کالبد و نوع زندگی تازه در محله&zwnj;های جدید شهر محقق کنند. محلۀ دولت یکی از مهم&zwnj;ترین بخش&zwnj;های شهر جدید بود که عناصر ضروری زندگی مدرن را در خود جای داد و با نوع معماری و بافت شهری متفاوت پاسخی به نیازهای جامعه بود.&nbsp;</p>
