--- a/_posts/2019-02-27-Kwfp8.html
+++ b/_posts/2019-02-27-Kwfp8.html
@@ -1,6 +1,6 @@
 --- 
-title: "مسجد جامع ورامین، بازشناسی روند شکل‌گیری و سیر تحول| حسین نخعی" 
-authors: asmaneh 
+title: "مسجد جامع ورامین، بازشناسی روند شکل‌گیری و سیر تحول" 
+authors: حسین نخعی 
 types: bap 
 categories: asmaneBooks 
 tags: مسجد جامع ورامین,بازشناسی شکل گیری مسجد جامع ورامین,مسجد جامع ورامین، بازشناسی روند شکل گیری و سیر تحول,حسین نخعی,معماری ایلخانی,معماری دوره ایلخانان 
@@ -9,7 +9,7 @@ featureImg: "/assets/img/posts/Kwfp8.jpg"
 slug: Kwfp8 
 gallery: 
 - image_path: "/assets/img/posts/Kwfp8.jpg" 
-  title: "مسجد جامع ورامین، بازشناسی روند شکل‌گیری و سیر تحول| حسین نخعی" 
+  title: "مسجد جامع ورامین، بازشناسی روند شکل‌گیری و سیر تحول" 
  
 --- 
 <p style="text-align: justify;">مسجد جامع ورامین بنایی است در ورامین، ۴۲ کیلومتری جنوب تهران، که تا چند دهۀ پیش خارج از بافت بوده و امروزه میان یک میدان شهری قرار دارد؛ بنایی مستطیل&zwnj;شکل با ابعاد ۴۳ &times; ۶۶ متر که یکی از بهترین نمونه&zwnj;های مساجد چهارایوانی است. این بنا در اواخر دورۀ ایلخانان ساخته شده و نیمۀ غربی آن را پس از مدت&zwnj;ها ویرانی طی سال&zwnj;های اخیر بازسازی کرده&zwnj;اند.&nbsp;</p>
