--- a/_posts/2021-08-10-YYWq.html
+++ b/_posts/2021-08-10-YYWq.html
@@ -1,48 +1,48 @@
 --- 
-title: "مناسبات معماری و علوم در ایران دوران اسلامی| روح‌الله مجتهدزاده" 
-authors: asmaneh 
+title: "مناسبات معماری و علوم در ایران دوران اسلامی" 
+authors: r.mojtahedzadeh 
 types: bap 
 categories: asmaneBooks 
-tags: معماری و علوم,روح‌الله مجتهدزاده,ایران دوران اسلامی 
+tags: معماری و علوم,روح‌الله مجتهدزاده,ایران دوران اسلامی,دانش معماران,دانش معماری,معرفت معماری,بنایی,بنایان,هندسه عملی,حساب عملی,حیل,علم و معماری,تاریخ علم,طبقه بندی علوم,نسبت علم و معماری در جهان اسلام 
 featured: false
 featureImg: "/assets/img/posts/YYWq.jpg" 
 slug: YYWq 
 gallery: 
 - image_path: "/assets/img/posts/YYWq.jpg" 
-  title: "مناسبات معماری و علوم در ایران دوران اسلامی| روح‌الله مجتهدزاده" 
+  title: "مناسبات معماری و علوم در ایران دوران اسلامی" 
  
 --- 
-<p>پیشه&zwnj;ورزانه بودن و غلبهٔ سنت شفاهی بر آموزش و انتقال معماری گذشتهٔ کشورمان اغلب موجب این سوءتعبیر شده که معماریِ تاریخی ایران سنتی فاقد دانش است که دستاوردهای خیره&zwnj;کنندهٔ آن نیز از منابعی غیر از علم (چون تجربه، شهود و نظایر آن) حاصل آمده؛ اما آیا به راستی تمام دستاوردهای شکوهمند معماری گذشته می&zwnj;توانسته است فارغ از دانشی نظام&zwnj;مند حاصل آید؟ این پرسش زمانی برجسته&zwnj;تر می&zwnj;گردد که دریابیم، به&zwnj;واسطهٔ برخی شواهد مسلّم تاریخی، دانش معماران گذشته تنها منحصر به امور بنّایی نبوده بلکه معماران با علومی چون هندسهٔ عملی و حساب عملی و حیل و نظایر آن نیز سروکار داشتند. این مهم ضرورت تأمل عمیق&zwnj;تر بر نسبت علم و معماری در معماری گذشتهٔ کشورمان را برجسته می&zwnj;سازد.</p>
-<p>در بررسی نسبت علم و معماری، به دو طریق می&zwnj;توان عمل کرد. یکی پرسش از نسبت عالمان و معماران است، مثل اینکه معماران با اهل هریک از حوزه&zwnj;های دانش چگونه به تعامل می&zwnj;پرداختند؟ و دیگری پرسش از نسبت صناعت معماری و علوم تعلیمی است، مثل اینکه معماری (به&zwnj;مثابه یکی از صناعات) با چه علومی سروکار داشت؟ رویکرد اول را می&zwnj;توان گونه&zwnj;ای رویکرد &laquo;اجتماعی-تاریخی&raquo; و رویکرد دوم را &laquo;فلسفی-تاریخی&raquo; دانست. سویهٔ غالب در کتاب حاضر رویکرد دوم است. این کتاب در شش فصل به موضوع خود می&zwnj;پردازد. فصل نخست پیشینهٔ پژوهش&zwnj;ها پیرامون نسب علم و معماری در جهان اسلام را می&zwnj;کاود و رویکرد کتاب را تبیین می&zwnj;کند. فصل دوم به بررسی دو مفهوم علم و معماری، به&zwnj;عنوان مهمترین واژگان کلیدی این پژوهش، اختصاص دارد. در فصل سوم متون طبقه&zwnj;بندی علوم، در مقام منابع پایه تحقیق، و روش تحلیل داده&zwnj;های حاصل از این منابع معرفی می&zwnj;گردد؛ و در چهارمین فصل یافته&zwnj;های این متون در راستای فهم نسبت علم و معماری در جهان اسلام عرضه می&zwnj;گردد. فصل پنجم، با استفاده از یافته&zwnj;های پیشین، ماحصل یا در واقع نظریهٔ تحقیق حاضر در باب نسبت علم و معماری در ایران دوران اسلامی را عرضه می&zwnj;کند؛ و سرانجام فصل ششم به جمع&zwnj;بندی و بیان تلخیص&zwnj;یافتهٔ اهمّ یافته&zwnj;های کتاب اختصاص دارد.</p>
-<p>&nbsp;</p>
-<p>▫️فهرست مطالب کتاب:</p>
-<p>تقریظ (به قلم مهرداد قیومی بیدهندی)</p>
-<p>پیشگفتار نویسنده</p>
-<p>فصل اول: مروری بر نسبت علم و معماری در پژوهش&zwnj;های موجود</p>
-<p>فصل دوم: کدام علم؟ کدام معماری؟</p>
-<p>۱- ۲- علم</p>
-<p>۲- ۲- معماری</p>
-<p>فصل سوم: منابع و روش تحقیق در فهم نسبت علم و معماری</p>
-<p>۱- ۳- فلسفۀ علم مسلمانان و مقولۀ طبقه&zwnj;بندی علوم</p>
-<p>۲- ۳- پیشینه و سیر طبقه&zwnj;بندی علوم در جهان اسلام</p>
-<p>۳- ۳- منابع و روش تحقیق</p>
-<p>فصل چهارم: نسبت علم و معماری در متون طبقه&zwnj;بندی علوم</p>
-<p>۱- ۴- قرن سوم/ نهم تا نیمۀ پنجم/ یازدهم؛ عصر فیلسوفان</p>
-<p>۲- ۴- نیمۀ قرن پنجم/ یازدهم تا اوائل قرن هشتم/ چهاردهم؛ عصر متکلمان</p>
-<p>۳- ۴- قرن هشتم/ چهاردهم تا سیزدهم/ نوزدهم؛ عصر دانشنامه&zwnj;نویسان</p>
-<p>فصل پنجم: مراتب علمی در صناعت معماری؛ طرح یک نظریه</p>
-<p>۱- ۵- علم عملی؛ مفهوم، جایگاه و سیر تحول آن در طبقه&zwnj;بندی علوم</p>
-<p>۲- ۵- معماری و علوم عملی</p>
-<p>۱- ۲- ۵- هندسۀ عملی؛ دانش پایه در حوزۀ معماری</p>
-<p>۲- ۲- ۵- از رئاست بناء تا عقود ابنیه؛ نظری بر علم استادان صناعت معماری</p>
-<p>۳- ۲- ۵- مهندسی؛ دانش عالی در حوزۀ معماری</p>
-<p>۳- ۵- تبیین سلسله&zwnj;مراتب نظام معرفت علمیِ معماری</p>
-<p>فصل ششم: جمع&zwnj;بندی و نتیجه&zwnj;گیری</p>
-<p>۱- ۶- جایگاه معماری در سلسله&zwnj;مراتب علوم در دوران اسلامی</p>
-<p>۲- ۶- چگونگی ارتباط معماری و سایر علوم</p>
-<p>۳- ۶- نقش علم در حوزۀ عمل معماری</p>
-<p>۴- ۶- نقش علم در تبیین مراتب حرفۀ معماری</p>
-<p>۵- ۶- محدودیت&zwnj;ها و پرسش&zwnj;های تازه</p>
-<p>فهرست منابع</p>
-<p>&nbsp;</p>
-<p>روح&zwnj;الله مجتهدزاده. <em>مناسبات معماری و علوم در ایران دوران اسلامی</em>.&nbsp; تهران: متن (فرهنگستان هنر)، ۱۴۰۰.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">پیشه&zwnj;ورزانه بودن و غلبهٔ سنت شفاهی بر آموزش و انتقال معماری گذشتهٔ کشورمان اغلب موجب این سوءتعبیر شده که معماریِ تاریخی ایران سنتی فاقد دانش است که دستاوردهای خیره&zwnj;کنندهٔ آن نیز از منابعی غیر از علم (چون تجربه، شهود و نظایر آن) حاصل آمده؛ اما آیا به راستی تمام دستاوردهای شکوهمند معماری گذشته می&zwnj;توانسته است فارغ از دانشی نظام&zwnj;مند حاصل آید؟ این پرسش زمانی برجسته&zwnj;تر می&zwnj;گردد که دریابیم، به&zwnj;واسطهٔ برخی شواهد مسلّم تاریخی، دانش معماران گذشته تنها منحصر به امور بنّایی نبوده بلکه معماران با علومی چون هندسهٔ عملی و حساب عملی و حیل و نظایر آن نیز سروکار داشتند. این مهم ضرورت تأمل عمیق&zwnj;تر بر نسبت علم و معماری در معماری گذشتهٔ کشورمان را برجسته می&zwnj;سازد.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">در بررسی نسبت علم و معماری، به دو طریق می&zwnj;توان عمل کرد. یکی پرسش از نسبت عالمان و معماران است، مثل اینکه معماران با اهل هریک از حوزه&zwnj;های دانش چگونه به تعامل می&zwnj;پرداختند؟ و دیگری پرسش از نسبت صناعت معماری و علوم تعلیمی است، مثل اینکه معماری (به&zwnj;مثابه یکی از صناعات) با چه علومی سروکار داشت؟ رویکرد اول را می&zwnj;توان گونه&zwnj;ای رویکرد &laquo;اجتماعی-تاریخی&raquo; و رویکرد دوم را &laquo;فلسفی-تاریخی&raquo; دانست. سویهٔ غالب در کتاب حاضر رویکرد دوم است. این کتاب در شش فصل به موضوع خود می&zwnj;پردازد. فصل نخست پیشینهٔ پژوهش&zwnj;ها پیرامون نسب علم و معماری در جهان اسلام را می&zwnj;کاود و رویکرد کتاب را تبیین می&zwnj;کند. فصل دوم به بررسی دو مفهوم علم و معماری، به&zwnj;عنوان مهمترین واژگان کلیدی این پژوهش، اختصاص دارد. در فصل سوم متون طبقه&zwnj;بندی علوم، در مقام منابع پایه تحقیق، و روش تحلیل داده&zwnj;های حاصل از این منابع معرفی می&zwnj;گردد؛ و در چهارمین فصل یافته&zwnj;های این متون در راستای فهم نسبت علم و معماری در جهان اسلام عرضه می&zwnj;گردد. فصل پنجم، با استفاده از یافته&zwnj;های پیشین، ماحصل یا در واقع نظریهٔ تحقیق حاضر در باب نسبت علم و معماری در ایران دوران اسلامی را عرضه می&zwnj;کند؛ و سرانجام فصل ششم به جمع&zwnj;بندی و بیان تلخیص&zwnj;یافتهٔ اهمّ یافته&zwnj;های کتاب اختصاص دارد.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">- فهرست مطالب کتاب:</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">تقریظ (به قلم مهرداد قیومی بیدهندی)</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">پیشگفتار نویسنده</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل اول: مروری بر نسبت علم و معماری در پژوهش&zwnj;های موجود</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل دوم: کدام علم؟ کدام معماری؟</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۲- علم</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۲- معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل سوم: منابع و روش تحقیق در فهم نسبت علم و معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۳- فلسفۀ علم مسلمانان و مقولۀ طبقه&zwnj;بندی علوم</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۳- پیشینه و سیر طبقه&zwnj;بندی علوم در جهان اسلام</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۳- ۳- منابع و روش تحقیق</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل چهارم: نسبت علم و معماری در متون طبقه&zwnj;بندی علوم</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۴- قرن سوم/ نهم تا نیمۀ پنجم/ یازدهم؛ عصر فیلسوفان</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۴- نیمۀ قرن پنجم/ یازدهم تا اوائل قرن هشتم/ چهاردهم؛ عصر متکلمان</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۳- ۴- قرن هشتم/ چهاردهم تا سیزدهم/ نوزدهم؛ عصر دانشنامه&zwnj;نویسان</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل پنجم: مراتب علمی در صناعت معماری؛ طرح یک نظریه</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۵- علم عملی؛ مفهوم، جایگاه و سیر تحول آن در طبقه&zwnj;بندی علوم</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۵- معماری و علوم عملی</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۲- ۵- هندسۀ عملی؛ دانش پایه در حوزۀ معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۲- ۵- از رئاست بناء تا عقود ابنیه؛ نظری بر علم استادان صناعت معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۳- ۲- ۵- مهندسی؛ دانش عالی در حوزۀ معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۳- ۵- تبیین سلسله&zwnj;مراتب نظام معرفت علمیِ معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فصل ششم: جمع&zwnj;بندی و نتیجه&zwnj;گیری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۱- ۶- جایگاه معماری در سلسله&zwnj;مراتب علوم در دوران اسلامی</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۲- ۶- چگونگی ارتباط معماری و سایر علوم</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۳- ۶- نقش علم در حوزۀ عمل معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۴- ۶- نقش علم در تبیین مراتب حرفۀ معماری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">۵- ۶- محدودیت&zwnj;ها و پرسش&zwnj;های تازه</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">فهرست منابع</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify;">روح&zwnj;الله مجتهدزاده.&nbsp;<em style="box-sizing: border-box;">مناسبات معماری و علوم در ایران دوران اسلامی</em>.&nbsp; تهران: متن (فرهنگستان هنر)، ۱۴۰۰.</p>
