--- a/_posts/2021-11-13-eYZqY.html
+++ b/_posts/2021-11-13-eYZqY.html
@@ -6,8 +6,13 @@ categories: borhegozar
 tags: برهه گذار,گذار از ساسانیان به دوران اسلامی,افول و سقوط ساسانیان,دوران اسلامی,مهرداد قیومی بیدهندی,دوره بندی تاریخ,تقطیع تاریخ,گذار,معماری در برهه گذار,معماری اسلامی,معماری ساسانی 
 sortOrder: 1 
 featured: false
+featureImg: "/assets/img/posts/eYZqY.jpg" 
 attachedPDF: "/assets/pdf/eYZqY.pdf" 
 slug: eYZqY 
+gallery: 
+- image_path: "/assets/img/posts/eYZqY.jpg" 
+  title: "پیشگفتار؛ برهۀ گذار، لایه‌های تاریخ معماری، و تقطیع‌های اعتباری" 
+ 
 excerpt: "کلیشه‌ٔ تقطیع تاریخ و تاریخ معماری سرزمین‌های اسلامی به دوران‌های پیش از اسلام و اسلامی، با همه‌ٔ فوایدی که داشته، رفته‌رفته همه‌ی شروط تقطیع سودمند را کمابیش از دست داده است. این دیوار در طی دوسه سده مطالعات شرق‌شناسی و اسلام‌شناسی چندان بلند شده که دانشوران را از پیوندهای دو سوی آن غافل کرده است. این دیوار چندان ستبر شده که حقایقی در زیر آن پنهان مانده است. این دیوار چندان ماندنی شده است که همه‌ٔ لایه‌های فرهنگ و جامعه را یکسان تقطیع کرده و این پیوستار را پیش چشم محققانْ متشکل از دو پارۀ ..." 
 --- 
 <p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">برخی از موزه&zwnj;های زیست&zwnj;شناسی و طبیعتْ تالارهایی در زیر دریا یا اقیانوس دارد که از پنجره&zwnj;های آنها می&zwnj;توان دریا را از درون و از پهلو تماشا کرد، یا تونل&zwnj;هایی شفاف که می&zwnj;توان در آنها در کف دریا پیش رفت. حال تصور کنیم در یکی از این موزه&zwnj;ها تالاری باشد که در آن بتوان رودی خروشان را از پهلو تماشا کرد؛ یعنی پنجره&zwnj;ای مثلاً به ارتفاع بیست متر که همه&zwnj;ی مقطع رود را، از خط سطح آب تا بستر رودخانه، پیش چشممان بگذارد. بر روی آب، امواج کوچک و بزرگ به&zwnj;سرعت می&zwnj;روند و حباب&zwnj;ها و کف&zwnj;هایی را که در کشمکش با هوا ایجاد کرده&zwnj;اند پیش می&zwnj;برند؛ خاشاک&zwnj;ها و شاخه&zwnj;های درختان را، بی&zwnj;اعتنا به وزن و اندازه&zwnj;شان، می&zwnj;دوانند و می&zwnj;رانند. آبزیان نیز در آنجا تندتر می&zwnj;روند و بر جریان آب سوار می&zwnj;شوند و می&zwnj;تازند. هرچه پایین&zwnj;تر بیاییم، از این جوش&zwnj;وخروش می&zwnj;کاهد و وقتی که به کف رودخانه می&zwnj;رسیم، از آن همه غوغا تنها نشانی که هست حرکت آرامی است که گیاهان ریشه&zwnj;دار کف رود با آهنگ آن به&zwnj;آرامی دست&zwnj;افشانی می&zwnj;کنند و پیش و پس می&zwnj;روند. در آن پایین، دیگر آبزیان نمی&zwnj;توانند بر امواج سوار شوند و ناچارند باله بجنبانند یا دست&zwnj;وپا بزنند تا پیش بروند. جریان آب آن&zwnj;قدر ملایم هست که ماهیان شکارچی مجال کمین بیابند و بر شکار خود حمله برند. خرده&zwnj;چوب&zwnj;ها و شاخه&zwnj;ها و برگ&zwnj;ها که چگالی فرورفتن ندارند، بر سر آب می&zwnj;دوند؛ اما سنگ&zwnj;ها و سنگ&zwnj;ریزه&zwnj;ها و استخوان&zwnj;ها، به&zwnj;رغم همه&zwnj;ی تندی آب، خود را به کف رودخانه می&zwnj;رسانند و در آنجا می&zwnj;آرمند یا به&zwnj;کندی این&zwnj;سو و آن&zwnj;سو می&zwnj;روند.</p>
