--- a/_posts/2020-05-29-X6NmJ.html
+++ b/_posts/2020-05-29-X6NmJ.html
@@ -2,7 +2,7 @@
 title: "کوی نارمک (۱۹۵۲- ۱۹۵۸): رشد و تغییر اجتماعی شهری در تهران| محمد صدیقی و نلسون موتا" 
 authors: asmaneh 
 types: bap 
-categories: book 
+categories: articles 
 tags: محمد صدیقی,شهرسازی مدرن ایران,تهران,کوی نارمک,تاریخ شهر ایران,مسکن اجتماعی 
 featured: false
 slug: X6NmJ 
