--- a/_posts/2018-03-07-SDRjy.html
+++ b/_posts/2018-03-07-SDRjy.html
@@ -1,6 +1,6 @@
 --- 
-title: "گادامر برای معماران" 
-authors: پل کیدر؛ ترجمۀ زهرا برادران 
+title: "گادامر برای معماران| پل کیدر" 
+authors: baradaran 
 types: bap 
 categories: asmaneBooks 
 tags: گادامر برای معماران,فلسفه معماری,فلسفه و معماری,گادامر,پل کیدر,زهرا برادران,هانس گئورگ گادامر,هنر و زیبایی شناسی,رویکرد هرمنوتیک به معماری 
@@ -9,7 +9,7 @@ featureImg: "/assets/img/posts/SDRjy.jpg"
 slug: SDRjy 
 gallery: 
 - image_path: "/assets/img/posts/SDRjy.jpg" 
-  title: "گادامر برای معماران" 
+  title: "گادامر برای معماران| پل کیدر" 
  
 --- 
 <p style="text-align: justify;">هانس-گئورگ گادامر یکی از برجسته&zwnj;ترین متفکران اروپایی قرن بیستم بود. فلسفهٔ او مخصوصا به کشف متداول&zwnj;ترین الگوهای تجربه و تفکر - که هرگاه مردم در جستجوی فهم جهان و یکدیگر هستند، زمانی که متون یا دیگر نمودهای معنا را تفسیر می&zwnj;کنند و هنگامی که هنر یا طبیعت را به گونه&zwnj;ای فریبنده، لذت&zwnj;بخش و معنادار تجربه می&zwnj;کنند، رخ می&zwnj;دهد - اختصاص دارد. گرچه گادامر به&zwnj;طور خاص دربارهٔ معماری کم نوشته است، نوشته&zwnj;های او در باب هنر و زیبایی&zwnj;شناسی گسترده&zwnj; است و نقشی محوری در برنامهٔ کلی فلسفی او بازی می&zwnj;کند. به همین علت، در طول دهه&zwnj;ها، اندیشهٔ او بر طیف گسترده&zwnj;ای از معماران و نظریه&zwnj;پردازان معماری نفوذ داشته است. یک رویکرد هرمنوتیک به معماری، الگوی هرمنوتیک تفکر و تجربه را در حوزه&zwnj;های مختلف حرفهٔ معماری کشف می&zwnj;کند. این الگو ممکن است در فعالیت آفرینشگرانهٔ معمار و فهم زیباشناختی آفرینش&zwnj;های او یافته شود. شاید در راهی که معماران برای شناخت سنت&zwnj;های معماری و نوشته&zwnj;های معمارانه دنبال می&zwnj;کنند، نهفته باشد. می&zwnj;شود آن را در مسیری که همهٔ کسانی که در پیشهٔ معماری همکاری می&zwnj;کنند (کارفرمایان، جامعه، بساز و بفروشان، مدیران و طراحان)، همدیگر را درک کرده و با یکدیگر کار می&zwnj;کنند، یافت.</p>
